--- a/css/index.css
+++ b/css/index.css
@@ -7,7 +7,7 @@ body {
     width: 100%;
     height: 100vh;
 
-    background-color: black;
+    background-color: #0F0F0F;
     color: white;
 
     display: flex;
