--- a/css/styles/profile.css
+++ b/css/styles/profile.css
@@ -32,7 +32,7 @@ nav {
     height: 150px;
     margin-top: 20%;
 
-    background-color: #4169E1;
+    background-color: white;
     border-radius: 100px;
     cursor: pointer;
 
@@ -42,7 +42,7 @@ nav {
 }
 
 .fa-solid {
-    color: white;
+    color: #4169E1;
 }
 
 div button{
