--- a/css/styles/signin.css
+++ b/css/styles/signin.css
@@ -21,12 +21,13 @@ body{
     background: transparent;
     border: 2px solid rgba(255, 255, 255, .2);
     backdrop-filter: blur(20px);
-    color: #fff;
+    color: #333;
     border-radius: 10px;
     padding: 30px 40px;
 }
 
 .wrapper h1{
+    color: #333;
     font-size: 36px;
     text-align: center;
 }
@@ -47,12 +48,12 @@ body{
     border: 2px solid rgba(255, 255, 255, .2);
     border-radius: 40px;
     font-size: 16px;
-    color: #fff;
+    color: #333;
     padding: 20px 45px 20px 20px;
 }
 
 .input-box input::placeholder{
-    color: #fff;
+    color: #333;
 }
 
 .input-box i{
@@ -71,13 +72,13 @@ body{
 }
 
 .remember-forgot label input{
-    accent-color: #fff;
+    accent-color: #333;
     margin-right: 3px;
     cursor: pointer;
 }
 
 .remember-forgot a{
-    color: #fff;
+    color: #333;
     text-decoration: none;
 }
 
@@ -88,15 +89,22 @@ body{
 .wrapper .bt{
     width: 100%;
     height: 45px;
-    background: #fff;
+    background: rgba(255, 255, 255, .2);
     border: none;
     outline: none;
     border-radius: 40px;
     box-shadow: 0 0 10px rgba(0, 0, 0, .1);
     cursor: pointer;
     font-size: 16px;
-    color: #333;
+    color: #333 ;
     font-weight: 600;
+    
+    transition: all 0.5s ease;
+}
+
+.wrapper .bt:hover {
+    transform: scale(1.1);
+    z-index: 1;
 }
 
 .wrapper .register-link{
@@ -106,7 +114,7 @@ body{
 }
 
 .register-link p a{
-    color: #fff;
+    color: #333;
     text-decoration: none;
     font-weight: 600;
 }
