--- a/css/styles/signup.css
+++ b/css/styles/signup.css
@@ -21,7 +21,7 @@ body{
     background: transparent;
     border: 2px solid rgba(255, 255, 255, .2);
     backdrop-filter: blur(20px);
-    color: #fff;
+    color: #333;
     border-radius: 10px;
     padding: 30px 40px;
 }
@@ -47,12 +47,12 @@ body{
     border: 2px solid rgba(255, 255, 255, .2);
     border-radius: 40px;
     font-size: 16px;
-    color: #fff;
+    color: #333;
     padding: 20px 45px 20px 20px;
 }
 
 .input-box input::placeholder{
-    color: #fff;
+    color: #333;
 }
 
 .input-box i{
@@ -63,19 +63,25 @@ body{
     font-size: 20px;
 }
 
-
 .wrapper .bt{
     width: 100%;
     height: 45px;
-    background: #fff;
+    background: rgba(255, 255, 255, .2);
     border: none;
     outline: none;
     border-radius: 40px;
     box-shadow: 0 0 10px rgba(0, 0, 0, .1);
     cursor: pointer;
     font-size: 16px;
-    color: #333;
+    color: #333 ;
     font-weight: 600;
+    
+    transition: all 0.5s ease;
+}
+
+.wrapper .bt:hover {
+    transform: scale(1.1);
+    z-index: 1;
 }
 
 .wrapper .register-link{
